# dtex

./: Cargo.toml  README.md  example.d.tex  example.tex  sub.tex
src/: main.rs
src/engine/: parser.rs
